# libiff

./: CMakeLists.txt  Doxyfile.in  INSTALL.md  ProjectHome.md  QUICKSTART.md  README.md  libiff.pc.in
cmake/: libiffConfig.cmake.in
core/ea/: ea_io.hpp  id.cpp
docs/: IFF-2.md  IFF-code.md  IFF.md
examples/: CMakeLists.txt  README.md  aiff_parser.cpp  chunk_extractor.cpp  secure_parser.cpp  simple_example.cpp  structure_analyzer.cpp  wav_parser.cpp
ext/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
ext/expected/: CMakeLists.txt
ext/failsafe/: CMakeLists.txt
include/iff/: byte_order.hh  chunk_header.hh  chunk_iterator.hh  chunk_reader.hh  chunk_types.hh  compiler.hh  endian.hh  exceptions.hh  fourcc.hh  handler_registry.hh  parse_options.hh  parser.hh
samples/: Berserk.anim  FAUG.anim  Half-OS.anim  IronMan.anim  SpaceDock1.anim  SpaceDock2.anim  Videoscape2.anim  ZOOM.LBM
src/core/: CMakeLists.txt  iff_types.hpp  structure.cpp
src/core/ea/: ea_io.hpp  id.cpp  id.hpp
src/gui/: CMakeLists.txt
src/libiff/: CMakeLists.txt  chunk_iterator.cc  chunk_reader.cc  handler_registry.cc  iff85_chunk_iterator.cc  iff85_chunk_iterator.hh  iff85_chunk_reader.cc  iff85_chunk_reader.hh  iff_config.h.in  input.cc  input.hh  parser.cc  riff_chunk_iterator.cc  riff_chunk_iterator.hh  riff_chunk_reader.cc  riff_chunk_reader.hh
src/test/: CMakeLists.txt  main.cpp
trunk/: CMakeLists.txt
trunk/core/ea/: ea_io.cpp  id.hpp
trunk/samples/: 05military-abrams-tank.3DS  OGRYN.IFF  OldSpaceDock.anim  TNGFly.anim  TP_SEX.LBM  Xam-Yot.anim
trunk/src/core/: CMakeLists.txt  generic_iff_reader.hpp  generic_parser.hpp  iff_io.cpp  iff_io.hpp  iff_types.hpp  parser.cpp  parser.hpp  structure.hpp
trunk/src/core/ea/: ea_io.cpp  ea_io.hpp  id.cpp  id.hpp  parser.hpp
trunk/src/gui/: main.cpp
trunk/src/test/: CMakeLists.txt
trunk/test/: main.cpp
unittest/: CMakeLists.txt  main.cc  test_bw64.cc  test_depth_first.cc  test_edge_cases.cc  test_error_messages.cc  test_factory.cc  test_fourcc.cc  test_generated_files.cc  test_iterator.cc  test_parser.cc  test_prop_support.cc  test_reader_errors.cc  test_rf64_edge_cases.cc  test_riff_iterator.cc  test_security.cc  test_simple_parser.cc  test_streaming.cc  test_utils.hh  test_warning_callbacks.cc  unittest_config.h.in
unittest/test_files_generator/: README.md  generate_test_files.py
unittest/test_files_generator/definitions/: alternating_sizes.json  cat_container.json  chunk_size_exceeds_file.json  complex_prop_list.json  container_missing_type.json  containers_only.json  deeply_nested.json  deeply_nested_correct.json  deeply_nested_riff.json  empty_containers.json  form_in_form.json  invalid_fourcc.json  io_error_test.json  large_chunks.json  malformed_list.json  many_small_chunks.json  minimal_aiff.json  minimal_wave.json  odd_sized.json  prop_defaults.json  reading_boundaries_test.json  rf64_basic.json  rf64_ds64_not_first.json  rf64_invalid_ds64.json  rf64_invalid_ds64_size.json  rf64_multiple_same_id.json  rf64_odd_sized_chunks.json  rf64_test.json  rf64_with_table.json  truncated.json  truncated_header.json  truncated_in_data.json  zero_sized_chunks.json  zero_sized_container.json
